<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.portafogli.SingleAccountActivity"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp">

            <EditText
                android:id="@+id/realm_transaction_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@+id/realm_transaction_amount"
                android:hint="@string/transaction_name"
                android:nextFocusDown="@id/realm_transaction_amount"
                android:paddingStart="8dp"
                android:singleLine="true" />

            <EditText
                android:id="@+id/realm_transaction_amount"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:hint="@string/amount"
                android:inputType="numberDecimal|numberSigned"
                android:nextFocusDown="@+id/realm_transaction_category"
                android:paddingEnd="8dp" />

            <Button
                android:id="@+id/realm_transaction_add"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/realm_transaction_amount"
                android:layout_margin="8dp"
                android:nextFocusDown="@+id/realm_transaction_name"
                android:text="@string/add" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/realm_transaction_header"
        style="@style/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/transactions" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/realm_transaction_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@id/realm_transaction_header" />
    </android.support.v7.widget.CardView>
</LinearLayout>
